Fix renderers not getting power broadcast messages

Switches from a StrongBinding to a BindingSet, otherwise, as soon as the
renderer had finished calling SetClient() the connection was detached
and the PowerMonitorMessageBroadcaster destroyed, because the client did
not maintain the connection.

Instead, we now have a single PowerMonitorMessageBroadcaster that
maintains a set of bound clients, and notifies all of them on power
messages.

R=blundell@chromium.org
BUG=696197

Review-Url: https://codereview.chromium.org/2729293002
Cr-Commit-Position: refs/heads/master@{#454703}

Former-commit-id: 0471e6079c754e7478a61ac81765cec789f5249a